--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,11 @@ h1 {
 #choices {
   position: relative;
   margin: auto;
+  margin-top: 25px;
 }
 
 .jumbotron {
   border: 5px solid black;
 }
+
 
